[project]
name = "chatryt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
